# Hangman

./: .gitignore  CMakeLists.txt  README.md  hangman.cpp
.github/workflows/: ci.yml
data/words/: animals.txt  countries.txt  movies.txt
docs/: LEVELS_BLUEPRINT.md  PROGRESS.md
include/hangman/: Categories.hpp  Difficulty.hpp  Game.hpp  Ruleset.hpp  Words.hpp
src/cli/: main.cpp
src/core/: Category.cpp  Category.hpp  Difficulty.cpp  Difficulty.hpp  HangmanGame.cpp  HangmanGame.hpp  Ruleset.cpp  Ruleset.hpp  WordBank.cpp  WordBank.hpp  WordRepository.cpp  WordRepository.hpp
src/gui/: win32_main.cpp
tests/: hangman_tests.cpp
